[package]
name = "sanitizer"
version = "0.1.7"
authors = ["DGulshan <11533177+DGulshan@users.noreply.github.com>", "Daksh14 <41485688+Daksh14@users.noreply.github.com>"]
edition = "2024"
description = "A collection of methods and macros to sanitize struct fields."
repository = "https://github.com/dashxhq/sanitizer"
license = "MIT"
keywords = ["sanitizer", "validate", "trim", "e164"]
categories = ["text-processing", "value-formatting"]

[dependencies]
heck = "0.5.0"
phonenumber = "0.3.7"
paste = "1.0.15"
num-traits = "0.2.19"

[dependencies.sanitizer_macros]
path = "sanitizer-macros"
version = "0.2.2"
optional = true

[features]
default = ["derive"]
derive = ["sanitizer_macros"]

[workspace]
members = ["sanitizer-macros"]
