[package]
name = "sanitizer"
description = "A collection of methods and macros to sanitize struct fields"
keywords = ["sanitizer", "validate", "trim", "e164", "case"]
categories = ["text-processing", "value-formatting"]
version = "1.0.0"
license = "MIT"
edition = "2024"

[dependencies]
heck = "0.5.0"
phonenumber = "0.3.1"
paste = "1.0"
num-traits = "0.2"

[dependencies.sanitizer_macros]
path = "sanitizer-macros"
version = "1.0.0"
optional = true

[features]
default = ["derive"]
derive = ["sanitizer_macros"]

[workspace]
members = ["sanitizer-macros"]
