[package]
name = "sanitizer"
description = "A collection of methods and macros to sanitize struct fields."
repository = "https://github.com/dashxhq/sanitizer"
version = "0.1.7"
license = "MIT"
edition = "2024"
keywords = ["sanitizer", "validate", "trim", "e164"]
categories = ["text-processing", "value-formatting"]

[dependencies]
heck = "0.5.0"
phonenumber = "0.3.7"
paste = "1.0.15"
num-traits = "0.2.19"

[dependencies.sanitizer_macros]
path = "sanitizer-macros"
version = "0.2.2"
optional = true

[features]
default = ["derive"]
derive = ["sanitizer_macros"]

[workspace]
members = ["sanitizer-macros"]
