[package]
name = "sanitizer_macros"
version = "0.1.0"
authors = ["weegee <somilsharma627@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"

# For macro testing
[dev-dependencies]
sanitizer = { path = "../../sanitizer" }
