[package]
name = "sanitizer_macros"
description = "Derive macro for the sanitizer crate"
keywords = ["sanitizer-macro", "macro"]
version = "1.0.0"
edition = "2024"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.60", features = ["extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"

# For macro testing
[dev-dependencies]
sanitizer = { path = "../../sanitizer" }
